--- a/template.Rmd
+++ b/template.Rmd
@@ -11,6 +11,30 @@ library(tidyverse)
 
 Let's import data using the `readr` package.
 ```{r}
-read_csv("data/FAS_litters.csv")
+litters_df = read_csv("data/FAS_litters.csv")
+litters_df = janitor::clean_names(litters_df)
 ```
 
+Look at the data. 
+```{r}
+litters_df
+head(litters_df)
+tail(litters_df)
+```
+
+
+```{r eval = FALSE}
+view(litters_df)
+```
+
+```{r}
+skimr::skim(litters_df)
+```
+
+`readCSV` options ..
+
+```{r}
+read_csv("data/FAS_litters.csv", na = c("", "NA", 999, 88))
+```
+
+## Other File Formats
