--- a/template.Rmd
+++ b/template.Rmd
@@ -3,8 +3,10 @@ title: "Data Import"
 output: github_document
 ---
 
-```{r}
+```{r echo = FALSE}
 library(tidyverse)
+library(readxl)
+library(haven)
 ```
 
 ## Data Import: CSVs
@@ -34,7 +36,51 @@ skimr::skim(litters_df)
 `readCSV` options ..
 
 ```{r}
-read_csv("data/FAS_litters.csv", na = c("", "NA", 999, 88))
+read_csv("data/FAS_litters.csv", na = c("", "NA", 999, 88), skip = 2)
 ```
 
 ## Other File Formats
+We need to read in an excel spreadsheet...
+
+```{r}
+mlb_df = read_excel("data/mlb11.xlsx")
+```
+
+```{r eval = FALSE}
+view(mlb_df)
+
+```
+
+```{r}
+lotr_words_df = 
+  read_excel(
+    "data/LotR_Words.xlsx",
+    range = "B3:D6"
+  )
+
+lotr_words_df
+```
+
+## Still more formats
+
+Read in a SAS dataset.
+
+```{r}
+pulse_df = read_sas("data/public_pulse_data.sas7bdat")
+
+pulse_df
+```
+
+## Data export 
+
+```{r}
+write_csv(lotr_words_df, file = "results/lotr_words_df.csv")
+```
+
+## Why not base r???
+Do not use `read.csv`. Use `read_csv`! 
+```{r}
+dont_do_this_df = read.csv("data/FAS_litters.csv")
+dont_do_this_df
+```
+
