--- a/data_manipulation.Rmd
+++ b/data_manipulation.Rmd
@@ -46,4 +46,92 @@ select(litters_data, -pups_survive)
 select(litters_data, -pups_survive, -group)
 ```
 
+You can rename variables as part of this process:
+
+```{r}
+select(litters_data, GROUP=group, LiTtEr_NuMbEr = litter_number)
+```
+
+If all you want to do is rename something, you can use `rename` instead of `select`. This will rename the variables you care about, and keep everything else:
+
+```{r}
+rename(litters_data, GROUP = group, LiTtEr_NuMbEr = litter_number)
+```
+
+There are some handy helper functions for `select`; read about all of them using `?select_helpers`. I use `starts_with()`, `ends_with()`, and `contains()` often, especially when there are variable names with suffixes or other standard patterns:
+
+```{r}
+select(litters_data, starts_with("gd"))
+select(litters_data, ends_with("weight"))
+```
+
+I also frequently use `everything()`, which is handy for reorganizing columns without discarding anything:
+
+```{r}
+select(litters_data, litter_number, pups_survive, everything())
+```
+
+You will often filter using comparison operators (`>`, `>=`, `<`, `<=`, `==`, and `!=`). You may also use `%in%` to detect if values appear in a set (useful for characters), and `is.na()` to find missing values. The results of comparisons are logical-- the statement is `TRUE` or `FALSE` depending on the values you compare -- and can be combined with other comparisons using the logical operators `&` and `|`, or negated using `!`. 
+
+Some ways you might filter the litters data are:
+
+* `gd_of_birth == 20`
+* `pups_born_alive >= 2`
+* `pups_survive != 4`
+* `!(pups_survive == 4)`
+* `group %in% c("Con7", "Con8")`
+* `group == "Con7" & gd_of_birth == 20`
+
+```{r}
+filter(litters_data, gd_of_birth == 20)
+
+filter(litters_data, group == "Con7" & gd_of_birth == 20)
+```
+
+A very common filtering step requires you to omit missing observations. You *can* do this with `filter`, but I recommend using `drop_na` from the `tidyr` package:
+
+* `drop_na(litters_data)` will remove any row with a missing value 
+* `drop_na(litters_data, wt_increase)` will remove rows for which `wt_increase` is missing. 
+
+### `mutate`
+
+The example below creates a new variable measuring the difference between `gd18_weight` and `gd0_weight` and modifies the existing `group` variable.
+
+```{r}
+#litter_data2 = 
+mutate(litters_data,
+       wt_gain = gd18_weight - gd0_weight,
+       group = str_to_lower(group),
+       # wt_gain_kg = wt_gain * 2.2
+       )
+```
+### `arrange`
+
+In comparison to the preceding, arranging is pretty straightforward. You can arrange the rows in your data according to the values in one or more columns:
+
+```{r}
+head(arrange(litters_data, group, pups_born_alive), 10)
+```
+
+You can also sort in descending order if you'd like.
+```{r}
+head(arrange(litters_data, desc(group), pups_born_alive), 10)
+```
+
+### `%>%`
+Piping! Control + Shift + M is the keyboard shortcut.
+
+```{r}
+litters_data = 
+  read_csv("data/FAS_litters.csv", col_types = "ccddiiii") %>%
+  janitor::clean_names() %>%
+  select(-pups_survive) %>%
+  mutate(
+    wt_gain = gd18_weight - gd0_weight,
+    group = str_to_lower(group)) %>% 
+  drop_na(wt_gain)
+
+litters_data
+```
+
 
